[gd_scene load_steps=4 format=3 uid="uid://cwd5j8qr66eh3"]

[ext_resource type="Script" path="res://Legends/Legends.gd" id="1_rrdvj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2h335"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8gdv1"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Legends" type="VBoxContainer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -63.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_rrdvj")

[node name="RetractButton" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2h335")
text = "VVV"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8gdv1")

[node name="LegendsContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[connection signal="pressed" from="RetractButton" to="." method="_on_retract_button_pressed"]
